--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Aquí vamos a hacer un blogpost</h1>
-    <p>y este es el párrafo de inicio</p>    
+    <div id="container">
+        <div id="post">
+            <h1>Este es el título interesante y atractivo del post</h1>
+            <p>y este es el párrafo dnode vamos a explicar las cosas increíbles que se pueden hacer con ramas</p> 
+        </div>
+    </div>
 </body>
 </html>
