--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
         <div id="post">
             <h1>Este es el título interesante y atractivo del post</h1>
             <p>y este es el párrafo dnode vamos a explicar las cosas increíbles que se pueden hacer con ramas</p> 
