--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,7 @@
         <div id="post">
             <h1>Este es el título interesante y atractivo del post</h1>
             <p>y este es el párrafo dnode vamos a explicar las cosas increíbles que se pueden hacer con ramas</p> 
+            <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mejor que ir a conferencias o salir en Youtube. Pero estadísticamente no lo eres.... por ahora</p>
         </div>
     </div>
 </body>
