--- a/blogpost.html
+++ b/blogpost.html
@@ -19,6 +19,9 @@
             <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mejor que ir a conferencias o salir en Youtube. Pero estadísticamente no lo eres.... por ahora</p>
             <p>Suscríbete y dale like</p>
         </div>
+        <div id="footer">
+            Hecho con amor en Platzi
+        </div>
     </div>
 </body>
 </html>
