cambio a entidades HTML

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
@@ -16,7 +16,7 @@
         </div>
         <div id="post">
             <h1>Este es el título interesante y atractivo del post</h1>
-            <p>y este es el párrafo dnode vamos a explicar las cosas increíbles que se pueden hacer con ramas</p> 
+            <p>y este es el p&aacute;rrafo donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p> 
             <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mejor que ir a conferencias o salir en Youtube. Pero estadísticamente no lo eres.... por ahora</p>
             <p>Suscríbete y dale like.</p>
         </div>
